crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_fold__empty_tail.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_fold.rs
expression: fixture.snapshot()
---
--- unoptimized Core
tailList (con (list integer) [])
--- unoptimized UPLC
(program 1.1.0 [(force (builtin tailList)) (con (list integer) [])])
--- optimized Core
tailList (con (list integer) [])
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1 [builtin_1 (con (list integer) [])]) (force (builtin tailList))])
--- result
error: Runtime(EmptyList([]))
--- logs
[]
--- budget
cpu: 81763, memory: 132
