crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_fold__integer_data.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_fold.rs
expression: fixture.snapshot()
---
--- unoptimized Core
iData 7
--- unoptimized UPLC
(program 1.1.0 [(builtin iData) (con integer 7)])
--- optimized Core
iData 7
--- optimized UPLC
(program 1.1.0 [(builtin iData) (con integer 7)])
--- result
(con data (I 7))
--- logs
[]
--- budget
cpu: 63399, memory: 432
