crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_fold__list_data.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_fold.rs
expression: fixture.snapshot()
---
--- unoptimized Core
listData (con (list data) [(I 7)])
--- unoptimized UPLC
(program 1.1.0 [(builtin listData) (con (list data) [(I 7)])])
--- optimized Core
(con data (List [I 7]))
--- optimized UPLC
(program 1.1.0 (con data (List [I 7])))
--- result
(con data (List [I 7]))
--- logs
[]
--- budget
cpu: 81952, memory: 432
