crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__constant_fold__map_data.snap
---
source: crates/nash-codegen/src/optimizer_tests/constant_fold.rs
expression: fixture.snapshot()
---
--- unoptimized Core
mapData (con (list (pair data data)) [])
--- unoptimized UPLC
(program 1.1.0 [(builtin mapData) (con (list (pair data data)) [])])
--- optimized Core
(con data (Map []))
--- optimized UPLC
(program 1.1.0 (con data (Map [])))
--- result
(con data (Map []))
--- logs
[]
--- budget
cpu: 116346, memory: 432
